crates/qwik-optimizer-oxc/tests/snapshots/example_prod_node.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_gZqPatVoDqw = () => import("./test.tsx_Foo_component_gZqPatVoDqw");
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
import { component$ } from "@qwik.dev/core";
export const Foo = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"));

=== test.tsx_Foo_component_gZqPatVoDqw.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
export const Foo_component_gZqPatVoDqw = () => {
	return <div>
			<div onClick$={() => console.log("first")} />
			<div onClick$={() => console.log("second")} />
			<div onClick$={() => console.log("third")} />
		</div>;
}

=== test.tsx_Foo_component_div_q_e_click_OJboCLusyIA.tsx === (ENTRY)


=== test.tsx_Foo_component_div_q_e_click_OJboCLusyIA.tsx === (ENTRY)


=== test.tsx_Foo_component_div_q_e_click_OJboCLusyIA.tsx === (ENTRY)
