crates/qwik-optimizer-oxc/tests/snapshots/example_props_wrapping2.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal } from "@qwik.dev/core";
export const Works = component$((props: { fromProps: number }) => {
  let fromLocal = useSignal(0);
  return (
    <div
      computed={fromLocal + props.fromProps}
      local={fromLocal}
      props-wrap={props.fromProps}
      props-only={{ props: props.fromProps }}
      props={{ props: props.fromProps, local: fromLocal }}
    ></div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const Works = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl((props: {
	fromProps: number;
}) => {
	let fromLocal = useSignal(0);
	return /* @__PURE__ */ _jsxSorted("div", {
		computed: fromLocal + props.fromProps,
		local: fromLocal,
		props-wrap: props.fromProps,
		props-only: { props: props.fromProps },
		props: {
			props: props.fromProps,
			local: fromLocal
		}
	}, null, null, 3, "u6_0");
}, "Works_component_xJyUXaLUiKw"));
