crates/qwik-optimizer-oxc/tests/snapshots/example_props_wrapping_children.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal } from "@qwik.dev/core";
export const Works = component$(({ fromProps }) => {
  let fromLocal = useSignal(0);
  return (
    <div>
      {fromLocal}
      {fromProps}
      {fromLocal + fromProps}
      {{ props: fromProps }}
      {{ local: fromLocal }}
      {{ props: fromProps, local: fromLocal }}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const Works = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl((_rawProps) => {
    let fromLocal = useSignal(0);
    return /* @__PURE__ */ _jsxSorted(
      "div",
      null,
      null,
      [
        fromLocal,
        fromProps,
        fromLocal + fromProps,
        { props: fromProps },
        { local: fromLocal },
        {
          props: fromProps,
          local: fromLocal,
        },
      ],
      1,
      "u6_0",
    );
  }, "Works_component_xJyUXaLUiKw"),
);
