crates/qwik-optimizer-oxc/tests/snapshots/example_props_wrapping_children2.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$, useSignal } from "@qwik.dev/core";
export const Works = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl((props) => {
	let fromLocal = useSignal(0);
	return /* @__PURE__ */ _jsxSorted("div", null, null, [
		"before-",
		fromLocal,
		props.fromProps,
		fromLocal + props.fromProps,
		{ props: props.fromProps },
		{ local: fromLocal },
		{
			props: props.fromProps,
			local: fromLocal
		},
		"-after"
	], 1, "u6_0");
}, "Works_component_xJyUXaLUiKw"));
