crates/qwik-optimizer-oxc/tests/snapshots/example_qwik_conflict.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStyles } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core/what";

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log("not this", qrl());

componentQrl();
export const Foo = component$(
  () => {
    useStyles$("thing");
    const qwik = hW + handleWatch;
    console.log(qwik);
    const qrl = 23;
    return <div onClick$={() => console.log(qrl)} />;
  },
  {
    tagName: "my-foo",
  },
);

export const Root = component$(
  () => {
    useStyles($("thing"));
    return $(() => {
      return <div />;
    });
  },
  {
    tagName: "my-foo",
  },
);

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_useStyles_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_XXXXXXXXXXXX");
import { useStyles } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core/what";
export const hW = 12;
export const handleWatch = 42;
const componentQrl = () => console.log("not this", qrl());
componentQrl();
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
);
export const Root = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Root_component_XXXXXXXXXXXX"),
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX");
import { _jsxSorted } from "@qwik.dev/core";
import { hW } from "./test";
import { handleWatch } from "./test";
export const Foo_component_XXXXXXXXXXXX = () => {
  useStyles$("thing");
  const qwik = hW + handleWatch;
  console.log(qwik);
  const qrl = 23;
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    { "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_div_q_e_click_XXXXXXXXXXXX") },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core/what";
export const Foo_component_div_q_e_click_XXXXXXXXXXXX = () => console.log(qrl);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Root_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_useStyles_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_XXXXXXXXXXXX");
import { useStyles } from "@qwik.dev/core";
export const Root_component_XXXXXXXXXXXX = () => {
  useStyles(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Root_useStyles_XXXXXXXXXXXX"));
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Root_XXXXXXXXXXXX");
};

/*
{
  "origin": "test.tsx",
  "name": "Root_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Root_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Root_useStyles_XXXXXXXXXXXX.js === (ENTRY)
export const Root_useStyles_XXXXXXXXXXXX = "thing";

/*
{
  "origin": "test.tsx",
  "name": "Root_useStyles_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Root_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Root_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Root_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== test.tsx_Root_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
export const Root_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null);
};

/*
{
  "origin": "test.tsx",
  "name": "Root_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Root",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Root_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Root_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
