crates/qwik-optimizer-oxc/tests/snapshots/example_qwik_router_inline.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== ../node_modules/@qwik.dev/router/index.qwik.mjs ===
import { _deserializeData } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _getContextElement } from "@qwik.dev/core";
import { _jsxBranch } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { _restProps } from "@qwik.dev/core";
import { _serializeData } from "@qwik.dev/core";
import { _weakSerialize } from "@qwik.dev/core";
import { _wrapSignal } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { createContextId } from "@qwik.dev/core";
import { eventQrl } from "@qwik.dev/core";
import { getLocale } from "@qwik.dev/core";
import { implicit$FirstArg } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { noSerialize } from "@qwik.dev/core";
import { SkipRender } from "@qwik.dev/core";
import { Slot } from "@qwik.dev/core";
import { untrack } from "@qwik.dev/core";
import { useContext } from "@qwik.dev/core";
import { useContextProvider } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
import { useOnDocument } from "@qwik.dev/core";
import { useServerData } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { withLocale } from "@qwik.dev/core";
import * as qwikRouterConfig from "@qwik-router-config";
import swRegister from "@qwik-router-sw-register";
import { z, z as z2 } from "zod";
const RouteStateContext = /* @__PURE__ */ createContextId("qc-s");
// ... 7 context IDs ...
const RouterOutlet = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl(() => {
	_jsxBranch();
	useOnDocument("qinit", eventQrl(/* @__PURE__ */ inlinedQrl(() => {	/* popstate fallback */}, "RouterOutlet_component_useOnDocument_event_KnNE9eL0qfc")));
	// ... content rendering with _jsxSplit ...
}, "RouterOutlet_component_AKetNByE5TM"));
// ... QwikRouterProvider with complex navigation logic ...
// ... Link component with _restProps, _fnSignal, _wrapSignal ...
// ... Form, GetForm components ...
// ... routeAction$, routeLoader$, globalAction$, server$, validator$, zod$ ...
export { Form, globalAction$, globalActionQrl, Link, QwikRouterMockProvider, QwikRouterProvider, routeAction$, routeActionQrl, routeLoader$, routeLoaderQrl, RouterOutlet, server$, serverQrl, ServiceWorkerRegister, useContent, useDocumentHead, useLocation, useNavigate, validator$, validatorQrl, z2 as z, zod$, zodQrl };
