crates/qwik-optimizer-oxc/tests/snapshots/example_reg_ctx_name_segments.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { $, component$, server$ } from "@qwik.dev/core";
import { foo } from "./foo";
export const Works = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl((props) => {
	const text = "hola";
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [/* @__PURE__ */ _jsxSorted("div", null, { "q-e:click": /* @__PURE__ */ serverQrl(/* @__PURE__ */ inlinedQrl(() => console.log("in server", text), "Works_component_div_q_e_click_RawfByrs1Jk", [text])) }, null, 3, "u6_0"), /* @__PURE__ */ _jsxSorted("div", null, { "q-e:click": () => foo() }, null, 3, "u6_1")], 1, "u6_2");
}, "Works_component_xJyUXaLUiKw"));
