crates/qwik-optimizer-oxc/tests/snapshots/example_reg_ctx_name_segments_hoisted.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, server$, useStyle$ } from "@qwik.dev/core";

export const Works = component$((props) => {
  useStyle$(STYLES);
  const text = "hola";
  return <div onClick$={server$(() => console.log("in server", text))}></div>;
});

const STYLES = ".class {}";

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { useStyleQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const Works = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl((props) => {
    useStyleQrl(/* @__PURE__ */ inlinedQrl(STYLES, "Works_useStyle_OWYvjF6FfeA"));
    const text = "hola";
    return /* @__PURE__ */ _jsxSorted(
      "div",
      null,
      {
        "q-e:click": serverQrl(
          /* @__PURE__ */ inlinedQrl(
            () => console.log("in server", text),
            "Works_component_div_q_e_click_RawfByrs1Jk",
            [text],
          ),
        ),
      },
      null,
      3,
      "u6_0",
    );
  }, "Works_component_xJyUXaLUiKw"),
);
const STYLES = ".class {}";

=== DIAGNOSTICS ===

[]
